<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp">

    <EditText
        android:id="@+id/edit_text_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_first_name"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize" />

    <EditText
        android:id="@+id/edit_text_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_last_name"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/view_padding">

        <EditText
            android:id="@+id/edit_text_data_inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:gravity="left"
            android:hint="@string/data_inicio" />

        <ImageView
            android:id="@+id/image_view_pick_data"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:src="@android:drawable/ic_menu_my_calendar" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edit_text_telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_telefone" />

    <EditText
        android:id="@+id/edit_text_classificacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_classificacao"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/edit_text_nome_fantasia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_nome_fantasia" />

    <Button
        android:id="@+id/button_add_anuncio"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/button_padding"
        android:text="@string/add_usuario" />


</LinearLayout>